Resolve unused parameter warning in WKBundlePageOverlay.cpp https://bugs.webkit.org/show_bug.cgi?id=120521

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2013-08-30
Reviewed by Andreas Kling.

* WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.cpp:
(WKBundlePageOverlayFractionFadedIn):

Canonical link: https://commits.webkit.org/138502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154874 268f45cc-cd09-0410-ab3c-d52691b4dbfc